Segundo Commit: correção de erros

--- a/sobre.html
+++ b/sobre.html
@@ -9,13 +9,13 @@
 <body>
     <main>
         <header class="cabecalho">
-            <img src="../imgs/logo.png" alt="logo">
+            <img src="/imgs/logo.png" alt="logo">
             <nav>
                 <ul class="menu">
                     <li><a href="/index.html" target="_blank">Home</a></li>
                     <li><a href="#" target="_blank">Soluções</a></li>
-                    <li><a href="/contato/contato.html" target="_blank">Contato</a></li>
-                    <li><a href="/sobre/sobre.html" target="_blank">Sobre</a></li>
+                    <li><a href="/contato.html" target="_blank">Contato</a></li>
+                    <li><a href="/sobre.html" target="_blank">Sobre</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,10 +39,10 @@
                 <p>© 2025 Xamtrip - Todos os direitos reservados. XAMTRIP LTDA - CNPJ 36.462.734/0001-60</p>
             </div>
             <div class="redes_sociais">
-                <img src="../imgs/github.png" alt="GitHub">
-                <img src="../imgs/inta.png" alt="Instagram">
-                <img src="../imgs/x.png" alt="X">
-                <img src="../imgs/yout.png" alt="Youtube">
+                <img src="/imgs/github.png" alt="GitHub">
+                <img src="/imgs/inta.png" alt="Instagram">
+                <img src="/imgs/x.png" alt="X">
+                <img src="/imgs/yout.png" alt="Youtube">
             </div>
             <p class="dedicatoria">Ideias de Design tiradas do site: <a href="https://www.alterdata.com.br/">alterdata.com.br</a></p>
         </footer>
