--- a/contato.html
+++ b/contato.html
@@ -13,9 +13,9 @@
             <nav>
                 <ul class="menu">
                     <li><a href="/index.html" target="_blank">Home</a></li>
-                    <li><a href="/solucoes/solucoes.html" target="_blank">Soluções</a></li>
+                    <li><a href="/solucoes.html" target="_blank">Soluções</a></li>
                     <li><a href="#" target="_blank">Contato</a></li>
-                    <li><a href="/sobre/sobre.html" target="_blank">Sobre</a></li>
+                    <li><a href="/sobre.html" target="_blank">Sobre</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,20 +37,20 @@ telefones da empresa ou verificar onde encontram-se os escritórios de
 atendimento em todo o Brasil.</p>
                 <a href="#" class="chamamento-duvida_btn">Clique Aqui</a>
             </div>
-            <img src="../imgs/contato1.jpg" alt="duvida">
+            <img src="/imgs/contato1.jpg" alt="duvida">
         </section>
         <p class="chamamento-duvida_pergunta titulo_suporte">Conheça nosso suporte</p>
         <section class="list-solucao">
             <div class="list-solucao_item">
-                <a href="#"><img src="../imgs/contato_icons/1.png" alt="icon1"></a>
+                <a href="#"><img src="/imgs/contato_icons/1.png" alt="icon1"></a>
                 <h2>Contato Via Chat</h2>
             </div>
             <div class="list-solucao_item">
-                <a href="#"><img src="../imgs/contato_icons/2.png" alt="icon1"></a>
+                <a href="#"><img src="/imgs/contato_icons/2.png" alt="icon1"></a>
                 <h2>Suporte Remoto</h2>
             </div>
             <div class="list-solucao_item">
-                <a href="#"><img src="../imgs/contato_icons/3.png" alt="icon1"></a>
+                <a href="#"><img src="/imgs/contato_icons/3.png" alt="icon1"></a>
                 <h2>Base Conhecimento</h2>
             </div>
         </section>
@@ -59,10 +59,10 @@ atendimento em todo o Brasil.</p>
                 <p>© 2025 Xamtrip - Todos os direitos reservados. XAMTRIP LTDA - CNPJ 36.462.734/0001-60</p>
             </div>
             <div class="redes_sociais">
-                <img src="../imgs/github.png" alt="GitHub">
-                <img src="../imgs/inta.png" alt="Instagram">
-                <img src="../imgs/x.png" alt="X">
-                <img src="../imgs/yout.png" alt="Youtube">
+                <img src="/imgs/github.png" alt="GitHub">
+                <img src="/imgs/inta.png" alt="Instagram">
+                <img src="/imgs/x.png" alt="X">
+                <img src="/imgs/yout.png" alt="Youtube">
             </div>
             <p class="dedicatoria">Ideias de Design tiradas do site: <a href="https://www.alterdata.com.br/">alterdata.com.br</a></p>
         </footer>
