--- a/solucoes.html
+++ b/solucoes.html
@@ -9,13 +9,13 @@
 <body>
     <main>
         <header class="cabecalho">
-            <img src="../imgs/logo.png" alt="logo">
+            <img src="/imgs/logo.png" alt="logo">
             <nav>
                 <ul class="menu">
                     <li><a href="/index.html" target="_blank">Home</a></li>
                     <li><a href="#" target="_blank">Soluções</a></li>
-                    <li><a href="/contato/contato.html" target="_blank">Contato</a></li>
-                    <li><a href="/sobre/sobre.html" target="_blank">Sobre</a></li>
+                    <li><a href="/contato.html" target="_blank">Contato</a></li>
+                    <li><a href="/sobre.html" target="_blank">Sobre</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,25 +26,25 @@
         <p class="titulo_secao">A Xamtrip possui um <span>pacote perfeito</span> para cada momento da sua empresa.</p>
         <section class="list-solucao">
             <div class="list-solucao_item">
-                <img src="../imgs/icons/1.png" alt="icon1">
+                <img src="/imgs/icons/1.png" alt="icon1">
                 <h2>Contabilidade</h2>
                 <p>Inicie sua jornada. Desfrute gratuitamente das ferramentas do Pack Community.</p>
                 <a href="#">Saiba Mais</a>
             </div>
             <div class="list-solucao_item">
-                <img src="../imgs/icons/2.png" alt="icon1" id="gestao">
+                <img src="/imgs/icons/2.png" alt="icon1" id="gestao">
                 <h2>Gestão Geral</h2>
                 <p>Pacote perfeito para quem tem poucos clientes, porém grandes sonhos.</p>
                 <a href="#">Saiba Mais</a>
             </div>
             <div class="list-solucao_item">
-                <img src="../imgs/icons/3.png" alt="icon1" id="imobiliario">
+                <img src="/imgs/icons/3.png" alt="icon1" id="imobiliario">
                 <h2>Imobiliário</h2>
                 <p>Inicie seu projeto com o que há de mais moderno no mercado contábil.</p>
                 <a href="#">Saiba Mais</a>
             </div>
             <div class="list-solucao_item">
-                <img src="../imgs/icons/4.png" alt="icon1" id="educacao">
+                <img src="/imgs/icons/4.png" alt="icon1" id="educacao">
                 <h2>Educação</h2>
                 <p>Uma gestão completa e de qualidade para a sua empresa contábil.</p>
                 <a href="#">Saiba Mais</a>
@@ -56,17 +56,17 @@
                 <p class="chamamento-duvida_motiva">Nós temos uma equipe preparada que identificará a melhor opção para você!</p>
                 <a href="#" class="chamamento-duvida_btn">Clique Aqui</a>
             </div>
-            <img src="../imgs/duvida.jpg" alt="duvida">
+            <img src="/imgs/duvida.jpg" alt="duvida">
         </section>
         <footer class="contatos-mais_informacoes">
             <div class="mais_informacoes">
                 <p>© 2025 Xamtrip - Todos os direitos reservados. XAMTRIP LTDA - CNPJ 36.462.734/0001-60</p>
             </div>
             <div class="redes_sociais">
-                <img src="../imgs/github.png" alt="GitHub">
-                <img src="../imgs/inta.png" alt="Instagram">
-                <img src="../imgs/x.png" alt="X">
-                <img src="../imgs/yout.png" alt="Youtube">
+                <img src="/imgs/github.png" alt="GitHub">
+                <img src="/imgs/inta.png" alt="Instagram">
+                <img src="/imgs/x.png" alt="X">
+                <img src="/imgs/yout.png" alt="Youtube">
             </div>
             <p class="dedicatoria">Ideias de Design tiradas do site: <a href="https://www.alterdata.com.br/">alterdata.com.br</a></p>
         </footer>
