--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <img src="imgs/logo.png" alt="logo">
             <nav>
                 <ul class="menu">
-                    <li><a href="#" target="_blank">Home</a></li>
-                    <li><a href="/solucoes/solucoes.html" target="_blank">Soluções</a></li>
-                    <li><a href="/contato/contato.html" target="_blank">Contato</a></li>
-                    <li><a href="#" target="_blank">Sobre</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="solucoes.html" target="_blank">Soluções</a></li>
+                    <li><a href="contato.html" target="_blank">Contato</a></li>
+                    <li><a href="sobre.html" target="_blank">Sobre</a></li>
                 </ul>
             </nav>
         </header>
